--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,20 @@ html, body {
 }
 
 header {
-    background-color: rgba(255, 255, 255, 0.262);
+    background-color: black;
     text-align: center;
+    color: white;
+}
+
+button {
+    background: black;
+    color: white;
+    border-radius: 8px;
+    border: red 1px solid;
+    padding: 30px;
+}
+
+#title {
+    font-size: 12rem;
+    color: white;
 }
