--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,7 @@ header {
   text-align: center;
   color: white;
   position: sticky;
+  top: 0;
 }
 
 nav {
@@ -31,6 +32,8 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
+  padding-left: 4rem;
+  padding-right: 6rem;
 }
 
 header h1 {
@@ -54,7 +57,7 @@ button {
   border-radius: 90px;
   border: none;
   padding: 30px;
-  margin: 10px;
+  margin: 1rem;
 }
 
 #title {
@@ -74,6 +77,8 @@ button {
   background-color: black;
   border-radius: 90px;
   padding: 20px;
+  padding-left: 6rem;
+  padding-right: 6rem;
   margin-top: -100px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -108,7 +113,7 @@ button {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 400px auto 50px;
   gap: 20px;
-  padding: 1rem;
+  padding: 10rem;
 }
 
 .menu-item {
@@ -133,9 +138,24 @@ button {
   height: 200px;
 }
 
-.footer {
-  background-color: black;
+footer {
+  background-color: rgb(28, 1, 1);
+  font-size: .75rem;
   color: white;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin-top: 12rem;
+  padding-top: 8rem;
+  padding-left: 6rem;
+  padding-right: 6rem;
+}
+
+.socials-icon {
+  width: 2rem;
+  height: 2rem;
+}
+
+.footer-div {
+  display: flex;
+  justify-content: space-evenly;
 }
