--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 
 html {
   background: url("/src/pizza-bg.jpg");
-  background-color: rgba(0, 0, 0, 0.486);
+  background-color: rgba(0, 0, 0, 0.725);
   background-blend-mode: overlay;
   background-attachment: fixed;
 }
@@ -140,7 +140,7 @@ button {
 
 footer {
   background-color: rgb(28, 1, 1);
-  font-size: .75rem;
+  font-size: 0.75rem;
   color: white;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -158,4 +158,44 @@ footer {
 .footer-div {
   display: flex;
   justify-content: space-evenly;
+}
+
+/* about.js */
+
+.about-photo {
+  height: 300px;
+  width: auto;
+}
+
+.about-photo-div {
+  display: flex;
+  gap: 2rem;
+}
+
+.about-title {
+  font-family: "Air America", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+  color: white;
+  font-size: 6rem;
+}
+
+.specials-div {
+  background-color: black;
+  color: white;
+  padding: 3rem;
+  border-radius: 8px;
+}
+
+.specials-div h2 {
+  font-family:"Air America", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+    font-size: 3rem;
+}
+
+.specials-div p {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
 }
