--- a/src/style.css
+++ b/src/style.css
@@ -113,7 +113,7 @@ button {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 400px auto 50px;
   gap: 20px;
-  padding: 10rem;
+  padding: 2rem;
 }
 
 .menu-item {
@@ -170,6 +170,7 @@ footer {
 .about-photo-div {
   display: flex;
   gap: 2rem;
+  justify-content: center;
 }
 
 .about-title {
@@ -188,14 +189,49 @@ footer {
 }
 
 .specials-div h2 {
-  font-family:"Air America", system-ui, -apple-system, BlinkMacSystemFont,
+  font-family: "Air America", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
 .specials-div p {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont,
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.about-div {
+  color: white;
+  padding: 1rem;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  margin: 2rem;
+}
+
+.about-div h1 {
+  font-family: "Air America", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
+  font-size: 7rem;
+  padding: 4rem;
+}
+
+.about-div p {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1rem;
+  line-height: 2.5;
+  width: 75ch;
+}
+
+.menu-title {
+  font-family: "Air America", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+  font-size: 2rem;
+  color: white;
+  text-align: center;
 }
