--- a/src/style.css
+++ b/src/style.css
@@ -111,7 +111,7 @@ button {
 .menu-div {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 400px auto 50px;
+  grid-auto-rows: auto;
   gap: 20px;
   padding: 2rem;
 }
@@ -231,7 +231,27 @@ footer {
   font-family: "Air America", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
-  font-size: 2rem;
+  font-size: 4rem;
   color: white;
   text-align: center;
+}
+
+.add-to-cart {
+  height: 2rem;
+  width: auto;
+}
+
+.select-menu {
+  background-color: black;
+  color: white;
+  border: solid 1px white;
+  padding: 6px;
+  border-radius: 4px;
+}
+
+.cart-select-div {
+  display: flex;
+  justify-content: space-between;
+  align-items: bottom;
+  margin-top: 2rem;
 }
