--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,10 @@
   src: url("/src/airamerica-regular-webfont.woff");
 }
 
+:root {
+  --yellow: rgb(253, 204, 57);
+}
+
 html {
   background: url("/src/pizza-bg.jpg");
   background-color: rgba(0, 0, 0, 0.725);
@@ -27,6 +31,7 @@ header {
   top: 0;
 }
 
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -38,6 +43,11 @@ nav {
 
 header h1 {
   font-family: "Air America";
+}
+
+.button-div button:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .title-div {
@@ -85,7 +95,8 @@ button {
 }
 
 .order-button:hover {
-  background-color: rgb(52, 27, 27);
+  background-color: rgb(37, 13, 13);
+  cursor: pointer;
 }
 
 .order-button-div {
@@ -113,7 +124,8 @@ button {
   grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: auto;
   gap: 20px;
-  padding: 4rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 
 .menu-item {
@@ -124,9 +136,13 @@ button {
   color: white;
   text-align: center;
   border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .menu-item h2 {
+  color: var(--yellow);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-style: italic;
@@ -139,25 +155,33 @@ button {
 }
 
 footer {
-  background-color: rgb(28, 1, 1);
-  font-size: 0.75rem;
+  background-color: black;
   color: white;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin-top: 12rem;
-  padding-top: 8rem;
+  padding-top: 4rem;
   padding-left: 6rem;
   padding-right: 6rem;
+  padding-bottom: 4rem;
 }
 
 .socials-icon {
-  width: 2rem;
   height: 2rem;
+  width: auto;
+  padding: 4px;
+  padding-bottom: 1rem;
+}
+
+.socials-icon:hover {
+  cursor: pointer;
 }
 
 .footer-div {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
+  align-items: baseline;
+  gap: 8rem;
 }
 
 /* about.js */
@@ -241,6 +265,10 @@ footer {
   width: auto;
 }
 
+.add-to-cart:hover {
+  cursor: pointer;
+}
+
 .select-menu {
   background-color: black;
   color: white;
@@ -256,7 +284,71 @@ footer {
   margin-top: 2rem;
 }
 
-.footer-order-button {
+#footer-order-button {
   color: white;
   background-color: black;
+  border: var(--yellow, 0.05);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: italic;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.odin-blurb {
+  text-align: center;
+  padding-top: 6rem;
+  color: white;
+  font-size: .75rem;
+}
+
+#footer-arrow {
+  height: 0.75rem;
+  width: auto;
+  padding-left: 1ch;
+}
+
+.footer-right-column p,
+.footer-left-column p {
+  font-family: "Air America", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 2rem;
+  padding-bottom: 8px;
+  color: var(--yellow);
+  text-align: left;
+  margin: 0;
+  padding-bottom: 1rem;
+}
+
+.footer-hours th {
+  text-align: left;
+}
+
+.footer-hours th, td {
+  padding: 4px;
+}
+
+.footer-hours th {
+ font-size: 1.25rem;
+}
+
+.footer-hours td {
+  font-size: 1rem;
+}
+
+.footer-left-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.footer-hours {
+  border-collapse: collapse;
+  margin: 25px 0;
+  min-width: 500px;
+  margin: 0;
+}
+
+.footer-left-column div {
+  padding-bottom: 1rem;
 }
