--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Air America";
-  src: url("/src/airamerica-regular-webfont.woff");
+  src: url("/src/assets/airamerica-regular-webfont.woff");
 }
 
 :root {
@@ -8,7 +8,7 @@
 }
 
 html {
-  background: url("/src/pizza-bg.jpg");
+  background: url("./assets/pizza-bg.jpg");
   background-color: rgba(0, 0, 0, 0.725);
   background-blend-mode: overlay;
   background-attachment: fixed;
